--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "connect-redis": "^7.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.4.2"
+    "express-session": "^1.17.3",
+    "mongoose": "^7.4.2",
+    "redis": "^4.6.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
