--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,23 @@ version: '3'
 services:
   node-app:
     build: .
-    ports:
-      - "8000:8000"
     networks:
       - my-network
     environment:
       - PORT=8000
     depends_on:
       - mongo
+
+  nginx:
+    image: nginx:stable-alpine
+    ports:
+      - "8000:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - node-app
+    networks:
+      - my-network
 
   mongo:
     image: mongo
